chore(pom): change to undertow server for pippo

--- a/pippo-helloworld/pom.xml
+++ b/pippo-helloworld/pom.xml
@@ -40,7 +40,7 @@
     </dependency>
     <dependency>
       <groupId>ro.pippo</groupId>
-      <artifactId>pippo-jetty</artifactId>
+      <artifactId>pippo-undertow</artifactId>
       <version>${pippo.version}</version>
     </dependency>
   </dependencies>
