--- a/rapidoid-helloworld/pom.xml
+++ b/rapidoid-helloworld/pom.xml
@@ -29,13 +29,13 @@
     <maven.shade.plugin.version>2.1</maven.shade.plugin.version>
     <exec.maven.plugin.version>1.5.0</exec.maven.plugin.version>
 
-    <rapidoid.version>5.3.3</rapidoid.version>
+    <rapidoid.version>5.3.5</rapidoid.version>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.rapidoid</groupId>
-      <artifactId>rapidoid-quick</artifactId>
+      <artifactId>rapidoid-http-server</artifactId>
       <version>${rapidoid.version}</version>
     </dependency>
   </dependencies>
