--- a/sparkjava-helloworld/pom.xml
+++ b/sparkjava-helloworld/pom.xml
@@ -38,6 +38,11 @@
       <artifactId>spark-core</artifactId>
       <version>${spark.java.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.13</version>
+    </dependency>
   </dependencies>
 
   <build>
