--- a/pippo-helloworld/pom.xml
+++ b/pippo-helloworld/pom.xml
@@ -18,7 +18,7 @@
   <properties>
     <java.version>1.8</java.version>
     <maven>3.5.0</maven>
-    <main.class>net.coatli.java.Application</main.class>
+    <main.class>net.coatli.java.PippoApplication</main.class>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.build.jdk.source>${java.version}</project.build.jdk.source>
@@ -51,7 +51,7 @@
   </dependencies>
 
   <build>
-    <finalName>pippo-helloworld</finalName>
+    <finalName>${project.artifactId}</finalName>
 
     <!-- Defining the plugin stack -->
     <plugins>
@@ -96,7 +96,7 @@
           <executable>java</executable>
           <arguments>
             <argument>-jar</argument>
-            <argument>target/${project.build.finalName}.${project.packaging}</argument>
+            <argument>${project.build.directory}/${project.build.finalName}.${project.packaging}</argument>
           </arguments>
         </configuration>
       </plugin>
