--- a/sparkjava-helloworld/pom.xml
+++ b/sparkjava-helloworld/pom.xml
@@ -91,7 +91,7 @@
           <executable>java</executable>
           <arguments>
             <argument>-jar</argument>
-            <argument>target/${project.build.finalName}.${project.packaging}</argument>
+            <argument>${project.build.directory}/${project.build.finalName}.${project.packaging}</argument>
           </arguments>
         </configuration>
       </plugin>
