--- a/pippo-helloworld/pom.xml
+++ b/pippo-helloworld/pom.xml
@@ -7,7 +7,7 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>net.coatli.java</groupId>
+  <groupId>net.coatli.java.microservice</groupId>
   <artifactId>pippo-helloworld</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -18,7 +18,7 @@
   <properties>
     <java.version>1.8</java.version>
     <maven>3.5.0</maven>
-    <main.class>net.coatli.java.PippoApplication</main.class>
+    <main.class>net.coatli.java.microservice.PippoHelloWorldApplication</main.class>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.build.jdk.source>${java.version}</project.build.jdk.source>
@@ -30,6 +30,7 @@
     <exec.maven.plugin.version>1.5.0</exec.maven.plugin.version>
 
     <pippo.version>1.4.0</pippo.version>
+    <slf4j.simple.version>1.7.7</slf4j.simple.version>
   </properties>
 
   <dependencies>
@@ -40,13 +41,13 @@
     </dependency>
     <dependency>
       <groupId>ro.pippo</groupId>
-      <artifactId>pippo-undertow</artifactId>
+      <artifactId>pippo-tjws</artifactId>
       <version>${pippo.version}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
-      <version>1.7.7</version>
+      <version>${slf4j.simple.version}</version>
     </dependency>
   </dependencies>
 
