chore(pippo): change to snapshot for twjs server

--- a/pippo-helloworld/pom.xml
+++ b/pippo-helloworld/pom.xml
@@ -29,7 +29,7 @@
     <maven.shade.plugin.version>2.1</maven.shade.plugin.version>
     <exec.maven.plugin.version>1.5.0</exec.maven.plugin.version>
 
-    <pippo.version>1.4.0</pippo.version>
+    <pippo.version>1.5.0-SNAPSHOT</pippo.version>
     <slf4j.simple.version>1.7.7</slf4j.simple.version>
   </properties>
 
@@ -50,6 +50,19 @@
       <version>${slf4j.simple.version}</version>
     </dependency>
   </dependencies>
+  
+  <repositories>
+    <repository>
+      <id>sonatype-nexus-snapshots</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 
   <build>
     <finalName>${project.artifactId}</finalName>
