--- a/pippo-helloworld/pom.xml
+++ b/pippo-helloworld/pom.xml
@@ -30,7 +30,7 @@
     <maven.shade.plugin.version>2.1</maven.shade.plugin.version>
     <exec.maven.plugin.version>1.5.0</exec.maven.plugin.version>
 
-    <pippo.version>1.5.0-SNAPSHOT</pippo.version>
+    <pippo.version>1.5.0</pippo.version>
     <slf4j.simple.version>1.7.7</slf4j.simple.version>
   </properties>
 
@@ -42,7 +42,7 @@
     </dependency>
     <dependency>
       <groupId>ro.pippo</groupId>
-      <artifactId>pippo-tjws</artifactId>
+      <artifactId>pippo-undertow</artifactId>
       <version>${pippo.version}</version>
     </dependency>
     <dependency>
@@ -51,28 +51,17 @@
       <version>${slf4j.simple.version}</version>
     </dependency>
   </dependencies>
-  
-  <repositories>
-    <repository>
-      <id>sonatype-nexus-snapshots</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
 
   <build>
+    <finalName>${project.artifactId}</finalName>
+
     <resources>
       <resource>
         <directory>${project.build.resourcesDirectory}</directory>
         <filtering>true</filtering>
       </resource>
     </resources>
-    
+
     <!-- Defining the plugin stack -->
     <plugins>
       <plugin>
