--- a/spring-helloworld/pom.xml
+++ b/spring-helloworld/pom.xml
@@ -14,19 +14,19 @@
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
 
-  <groupId>net.coatli.java</groupId>
+  <groupId>net.coatli.java.microhelloworld</groupId>
   <artifactId>spring-helloworld</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>Spring Hello World</name>
-  <description>The classic hello world example for Spring.</description>
+  <name>Spring - Hello World</name>
+  <description>The classic Hello World! for Spring</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <start-class>net.coatli.java.Application</start-class>
+    <start-class>net.coatli.java.microhelloworld.SpringHelloWorldApplication</start-class>
     <java.version>1.8</java.version>
     <maven>3.5.0</maven>
   </properties>
