--- a/grizzly-helloworld/pom.xml
+++ b/grizzly-helloworld/pom.xml
@@ -7,18 +7,18 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>net.coatli.java.microservice</groupId>
+  <groupId>net.coatli.java.microhelloworld</groupId>
   <artifactId>grizzly-helloworld</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>Grizzly Hello World</name>
-  <description>The classic hello world example for Grizzly.</description>
+  <name>Grizzly - Hello World</name>
+  <description>The classic Hello World! for Grizzly</description>
 
   <properties>
     <java.version>1.8</java.version>
     <maven>3.5.0</maven>
-    <main.class>net.coatli.java.microservice.GrizzlyHelloWorldApplication</main.class>
+    <main.class>net.coatli.java.microhelloworld.GrizzlyHelloWorldApplication</main.class>
 
     <project.build.resourcesDirectory>${basedir}/src/main/resources</project.build.resourcesDirectory>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
