--- a/light4j-helloworld/pom.xml
+++ b/light4j-helloworld/pom.xml
@@ -7,13 +7,13 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>net.coatli.java</groupId>
+  <groupId>net.coatli.java.microhelloworld</groupId>
   <artifactId>light4j-helloworld</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>Light 4J Hello World</name>
-  <description>The classic hello world example for Light 4J microframework.</description>
+  <name>Light4J - Hello World</name>
+  <description>The classic Hello World! for Light4J</description>
 
   <properties>
     <java.version>1.8</java.version>
@@ -30,7 +30,6 @@
     <exec.maven.plugin.version>1.5.0</exec.maven.plugin.version>
 
     <light4j.version>1.3.1</light4j.version>
-    <undertow.core.version>1.0.14.Final</undertow.core.version>
     <logback.classic.version>1.1.7</logback.classic.version>
   </properties>
 
