--- a/undertow-helloworld/pom.xml
+++ b/undertow-helloworld/pom.xml
@@ -7,18 +7,18 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>net.coatli.java.microservice</groupId>
+  <groupId>net.coatli.java.microhelloworld</groupId>
   <artifactId>undertow-helloworld</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>Undertow Hello World</name>
-  <description>The classic hello world example for Undertow.</description>
+  <name>Undertow - Hello World</name>
+  <description>The classic Hello World! for Undertow</description>
 
   <properties>
     <java.version>1.8</java.version>
     <maven>3.5.0</maven>
-    <main.class>net.coatli.java.microservice.UndertowHelloWorldApplication</main.class>
+    <main.class>net.coatli.java.microhelloworld.UndertowHelloWorldApplication</main.class>
 
     <project.build.resourcesDirectory>${basedir}/src/main/resources</project.build.resourcesDirectory>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -30,6 +30,7 @@
     <exec.maven.plugin.version>1.5.0</exec.maven.plugin.version>
 
     <undertow.core.version>1.4.12.Final</undertow.core.version>
+    <logback.classic.version>1.2.3</logback.classic.version>
   </properties>
 
   <dependencies>
@@ -37,6 +38,11 @@
       <groupId>io.undertow</groupId>
       <artifactId>undertow-core</artifactId>
       <version>${undertow.core.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>${logback.classic.version}</version>
     </dependency>
   </dependencies>
 
