--- a/undertow-helloworld/pom.xml
+++ b/undertow-helloworld/pom.xml
@@ -30,7 +30,7 @@
     <exec.maven.plugin.version>1.5.0</exec.maven.plugin.version>
 
     <undertow.core.version>1.4.21.Final</undertow.core.version>
-    <logback.classic.version>1.2.3</logback.classic.version>
+    <slf4j.simple.version>1.7.21</slf4j.simple.version>
   </properties>
 
   <dependencies>
@@ -40,9 +40,9 @@
       <version>${undertow.core.version}</version>
     </dependency>
     <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>${logback.classic.version}</version>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>${slf4j.simple.version}</version>
     </dependency>
   </dependencies>
 
